[tool.poetry]
name = "dsapy"
version = "0.1.0"
description = ""
authors = ["hglong16 <intihad.vuong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.1.5"
pytest = "^7.4.3"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
